publican/datadir/Common_Content/common/en-US/css/common.css
* {
	widows: 4 !important;
	orphans: 4 !important;
}

body, h1, h2, h3, h4, h5, h6, pre, li, div {
	line-height: 1.29em;
}

body {
	background-color: white;
	margin:0 auto;
	font-family: "liberation sans", "Myriad ", "Bitstream Vera Sans", "Lucida Grande", "Luxi Sans", "Trebuchet MS", helvetica, verdana, arial, sans-serif;
	font-size: 14px;
	max-width: 770px;
	color: black;
}

body.toc_embeded {
	/*for web hosting system only*/
	margin-left: 300px;
}

object.toc, iframe.toc {
	/*for web hosting system only*/
	border-style: none;
	position: fixed;
	width: 290px;
	height: 99.99%;
	top: 0;
	left: 0;
	z-index: 100;
	border-style: none;
	border-right:1px solid #999;
}

/* Hide web menu */

body.notoc {
	margin-left: 3em;
}

iframe.notoc {
	border-style:none;
	border: none;
	padding: 0px;
	position:fixed;
	width: 21px;
	height: 29px;
	top: 0px;
	left:0;
	overflow: hidden;
	margin: 0px;
	margin-left: -3px;
}
/* End hide web menu */

/* desktop styles */
body.desktop {
	margin-left: 26em;
}

body.desktop .book > .toc {
	display:block;
	width:24em;
	height:99.99%;
	position:fixed;
	overflow:auto;
	top:0px;
	left:0px;
/*	padding-left:1em; */
	background-color:#EEEEEE;
	font-size: 12px;
}

.toc {
	line-height:1.35em;
}

.toc .glossary,
.toc .chapter, .toc .appendix {
	margin-top:1em;
}

.toc .part {
	margin-top:1em;
	display:block;
}

span.glossary,
span.appendix {
	display:block;
	margin-top:0.5em;
}

div {
	padding-top:0px;
}

div.section {
	page-break-inside: avoid;
}

p, div.para {
	padding-top: 0px;
	margin-top: 0.3em;
	padding-bottom: 0px;
	margin-bottom: 1em;
}

div.formalpara {
	padding-top: 0px;
	margin-top: 1em;
	padding-bottom: 0px;
	margin-bottom: 1em;
}

.varlistentry div.para {
	page-break-before: avoid;

}

/*Links*/
a {
	outline: none;
}

a:link {
	text-decoration: none;
	border-bottom: 1px dotted ;
	color:#3366cc;
}

a:visited {
	text-decoration:none;
	border-bottom: 1px dotted ;
	color:#003366;
}

div.longdesc-link {
	float:right;
	color:#999;
}

.toc a, .qandaset a {
	font-weight:normal;
	border:none;
}

.toc a:hover, .qandaset a:hover
{
	border-bottom: 1px dotted;
}

/*headings*/
h1, h2, h3, h4, h5, h6 {
	color: #336699;
	margin-top: 0px;
	margin-bottom: 0px;
	background-color: transparent;
	margin-bottom: 0px;
	margin-top: 20px;
	page-break-inside: avoid;
	page-break-after: avoid;
	word-wrap: break-word;
}

h1 {
	font-size: 22px;
}

.titlepage h1.title {
	text-align:left;
}

.book > .titlepage h1.title {
	text-align: center;
}

.article > .titlepage h1.title,
.article > .titlepage h2.title {
	text-align: center;
}

.set .titlepage > div > div > h1.title {
	text-align: center;
}

.part > .titlepage h1.title {
	text-align: center;
}

div.producttitle {
	margin-top: 0px;
	margin-bottom: 20px;
	font-size: 48px;
	font-weight: bold;
/* 	background: #003d6e url(../images/h1-bg.png) top left repeat-x; */
	color:  #336699;
	text-align: center;
	padding-top: 12px;
}

.titlepage .corpauthor {
	margin-top: 1em;
	text-align: center;
}

.section h1.title {
	font-size: 18px;
	padding: 0px;
	color: #336699;
	text-align: left;
	background: white;
}

h2 {
	font-size: 20px;
	margin-top: 30px;
}


div.subtitle, h2.subtitle, h3.subtitle {
	margin-top: 1em;
	margin-bottom: 1em;
	font-size: 18px;
	text-align: center;
}

div.subtitle {
	color:  #336699;
	font-weight: bold;
}

.preface > div > div > div > h2.title {
	margin-top: 1em;
	font-size: 18px;
}

.appendix h2 {
	font-size: 18px;
}



h3 {
	font-size: 14px;
	padding-top:0px;
	padding-bottom: 0px;
	margin-bottom: 0px;
}
h4 {
	font-size: 14px;
	padding-top:0px;
	padding-bottom:0px;
}

h5 {
	font-size: 14px;
}

h6 {
	font-size: 14px;
	margin-bottom: 0px;
}

.abstract h6 {
	margin-top:1em;
	margin-bottom:.5em;
	font-size: 22px;
}

/*element rules*/
hr {
	border-collapse: collapse;
	border-style:none;
	border-top: 1px dotted #ccc;
	width:100%;
}

/* web site rules */
ul.languages, .languages li {
	display:inline;
	padding:0px;
}

.languages li a {
	padding:0px .5em;
	text-decoration: none;
}

.languages li p, .languages li div.para {
	display:inline;
}

.languages li a:link, .languages li a:visited {
	color:#444;
}

.languages li a:hover, .languages li a:focus, .languages li a:active {
	color:black;
}

ul.languages {
	display:block;
	background-color:#eee;
	padding:.5em;
}

/*supporting stylesheets*/

/*unique to the webpage only*/
.books {
	position:relative;
}

.versions li {
	width:100%;
	clear:both;
	display:block;
}

a.version {
	font-size: 20px;
	text-decoration:none;
	width:100%;
	display:block;
	padding:1em 0px .2em 0px;
	clear:both;
}

a.version:before {
	content:"Version";
	font-size: smaller;
}

a.version:visited, a.version:link {
	color:#666;
}

a.version:focus, a.version:hover {
	color:black;
}

.books {
	display:block;
	position:relative;
	clear:both;
	width:100%;
}

.books li {
	display:block;
	width:200px;
	float:left;
	position:relative;
	clear: none ;
}

.books .html {
	width:170px;
	display:block;
}

.books .pdf {
	position:absolute;
	left:170px;
	top:0px;
	font-size: smaller;
}

.books .pdf:link, .books .pdf:visited {
	color:#555;
}

.books .pdf:hover, .books .pdf:focus {
	color:#000;
}

.books li a {
	text-decoration:none;
}

.books li a:hover {
	color:black;
}

/*products*/
.products li {
	display: block;
	width:300px;
	float:left;
}

.products li a {
	width:300px;
	padding:.5em 0px;
}

.products ul {
	clear:both;
}

/*revision history*/
.revhistory {
	display:block;
}

.revhistory table {
	background-color:transparent;
	border-color:#fff;
	padding:0px;
	margin: 0;
	border-collapse:collapse;
	border-style:none;
}

.revhistory td {
	text-align :left;
	padding:0px;
	border: none;
	border-top: 1px solid #fff;
	font-weight: bold;
}

.revhistory .simplelist td {
	font-weight: normal;
}

.revhistory .simplelist {
	margin-bottom: 1.5em;
	margin-left: 1em;
}

.revhistory table th {
	display: none;
}


/*credits*/
.authorgroup div {
	clear:both;
	text-align: center;
}
/* ... */

